feat: optimize ShapeRecognizer's buildChains performance and add threshold guard for line segment processing